--- a/src/main/resources/templates/actas_por_numero.html
+++ b/src/main/resources/templates/actas_por_numero.html
@@ -109,7 +109,7 @@
 								<br>
 								<p>&nbsp;</p>
 								<p>&nbsp;</p>
-								    <form method="get"action="/actas_numero">
+								    <form method="get"action="/actas_por_numero">
 											<div class="col-md-3">
 												INGRESE EL NÚMERO DE ACTA:
 											</div>
